made spacing consistant, updated varibales, and fixed footer viewheight issue

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -1,121 +1,97 @@
+body {
+  background-color: $backgroundPrimary;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  justify-content: space-between;
+}
+
 .wrapper {
   max-width: 1260px;
   width: 95%;
   margin: 0 auto;
   height: 100%;
+}
 
-};
-header, main{
-    display: flex;
+header, main {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 button {
   padding: 10px 40px;
   border-radius: 5px;
   background-color: $accentPrimary;
   border-style: none;
-  color: #484137;
+  color: $accentTertiary;
   font-size: 1.5rem;
-  box-shadow: 3px 3px black;
-  transition: background 250ms ease-in-out, 
-                transform 150ms ease;
-};
+  box-shadow: 3px 3px $accentQuaternary;
+  transition: background-color 250ms ease-in-out, transform 150ms ease;
+}
 
 button:hover,
 button:focus {
   background-color: $accentTertiary;
   color: #D2E603;
-};
+}
 
 button:active{
-  box-shadow: 1px 1px black;
-transform: translateY(1px) translateX(1px);
-
+  box-shadow: 1px 1px $accentQuaternary;
+  transform: translateY(1px) translateX(1px);
 }
-body {
-  background-color:$backgroundPrimary;
-  text-align: center;
-};
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
-};
+}
 
-
-.intro, form, .generatedMovie{
-  background-color:$backgroundSecondary;
+.intro, form, .generatedMovie {
+  background-color: $backgroundSecondary;
   border: 4px solid $accentPrimary;
   border-radius: 15px;
   margin-top: 20px;
   padding: 5%;
   box-shadow: 5px 5px $accentTertiary, -3px -3px $primaryFontColor;
-
-};
-
-.intro, form{
-    max-width:760px;
 }
 
-.poster{
+.intro, form {
+  max-width: 760px;
+}
+
+.poster {
   width: 100%;
-  border-radius:6px;
+  border-radius: 6px;
   max-width: 350px;
 };
 
-p{
+p {
   margin-top:5%;
 }
 
 
 // Footer
 footer { 
-  background:black;
+  background:$accentQuaternary;
   width: 100%;
+  max-height: 75px;
   padding: 3% 0;
   margin-top: 5%;
   color: $accentPrimary;
+
   a{
     color:$accentPrimary;
   }
 
-  a:hover,
+  a:hover, 
   a:focus {
-    color: white;
+    color: $secondaryFontColor;
     text-decoration: none;
-  };
+  }
+
   p{
     margin: 0;
   }
-};
-
-
-
-
-
-
-// /* Element | file:///c:/Users/impul/OneDrive/Documents/all-web-dev/juno-bootcamp/juno-projects/project2/index.html */
-
-// .wrapper {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
-
-// /* styles.css | file:///c:/Users/impul/OneDrive/Documents/all-web-dev/juno-bootcamp/juno-projects/project2/styles/styles.css */
-
-// .intro {
-//   margin-top: ;
-// }
-
-// .intro, form, .generatedMovie {
-//   /* margin-top: 20px; */
-//   margin-top: 30px;
-// }
-
-// @media (min-width: 500px) {
-//   .heroHeader {
-//     margin-top: 20px;
-//   }
-// }
+}
